# kafka-python

kafka-python-cp/: Makefile  docker-compose-test.yaml  docker-compose.yaml  pyproject.toml  readme.md
kafka-python-cp/jobs/: run_procedure.py  settings.py
kafka-python-cp/jobs/common/: connection.py  storage.py
kafka-python-cp/jobs/kafka/: consumer.py  producer.py  utils.py
kafka-python-cp/tests/aws/: Dockerfile  provision-localstack.sh
kafka-python-cp/tests/aws/infrastructure/: cfn-kafka-service.yaml
kafka-python-cp/tests/shared/: Dockerfile  pyproject.toml
kafka-python-cp/tests/shared/helpers/: aws.py  comparisons.py  mocks.py  utils.py  yaml.py
kafka-python-cp/tests/shared/helpers/kafka/: avro_serilizer.py  kafka_topic_utils.py  schema_registry_resolver.py
kafka-python-cp/tests/system/: Dockerfile  conftest.py  fixtures.py  pytest.cfg  test_all.py
kafka-python-cp/tests/system/steps/: givens.py  thens.py  whens.py
